--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+
+    <!-- Modern normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -138,7 +149,7 @@
           <ul class="contacts-footer list">
             <li>
               <a
-                class="contacts-footer-address link"
+                class="contacts-footer-address link contacts"
                 href="https://goo.gl/maps/xn2wBfeugNixci9o8"
                 target="_blank"
                 rel="noreferrer noopener"
@@ -146,12 +157,14 @@
               >
             </li>
             <li>
-              <a href="mailto:info@devstudio.com" class="contacts-footer-mail link"
+              <a href="mailto:info@devstudio.com" class="contacts-footer-mail link contacts"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+380961111111" class="contacts-footer-tel link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="contacts-footer-tel link contacts"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </address>
