add logo footer

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </section>
     </main>
     <footer>
-      <div class="footer-bgc">
+      <div class="footer-bgc container">
         <a class="logo-footer" href="./index.html">Web<span>Studio</span></a>
         <address>
           <ul class="contacts-footer list">
