add styles to portfolio

--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
       </section>
     </main>
     <footer>
-      <div class="footer-bgc container">
-        <a class="logo-footer" href="./index.html">Web<span>Studio</span></a>
+      <div class="footer-bgc">
+        <a class="logo-footer container" href="./index.html">Web<span>Studio</span></a>
         <address>
-          <ul class="contacts-footer list">
+          <ul class="contacts-footer list container">
             <li>
               <a
                 class="contacts-footer-address link contacts"
