--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <div class="header-bgc">
+      <div class="header container">
         <nav class="site-nav">
           <a href="./index.html" class="logo-nav">Web<span>Studio</span></a>
           <ul class="nav-list list">
@@ -35,16 +35,18 @@
             <li><a href="" class="nav-item link">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="сontaсts list">
-          <li>
+        <ul class="header-contacts list">
+          <li class="contacts-item">
             <a href="mailto:info@devstudio.com" class="contacts-mail link">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+380961111111" class="contacts-tel link">+38 096 111 11 11</a></li>
+          <li class="contacts-item">
+            <a href="tel:+380961111111" class="contacts-tel link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
     <main>
-      <section class="section-portfolio">
+      <section class="section-portfolio container">
         <h1 class="title visually-hidden">Приклади робіт</h1>
         <ul class="filters list">
           <li><button type="button" class="filters-item">Усі</button></li>
@@ -53,8 +55,8 @@
           <li><button type="button" class="filters-item">Дизайн</button></li>
           <li><button type="button" class="filters-item">Маркетинг</button></li>
         </ul>
-        <ul class="list">
-          <li>
+        <ul class="portfolio-list list">
+          <li class="portfolio-list-item">
             <img
               src="./images/portfolio/portfolio1.jpg"
               alt="Розкритий ноутбук"
@@ -64,7 +66,7 @@
             <h2 class="title-item">Технокряк</h2>
             <p class="item-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
               src="./images/portfolio/portfolio2.jpg"
               alt="Два хлопці грають у баскетбол"
@@ -74,7 +76,7 @@
             <h2 class="title-item">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p class="item-text">Дизайн</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
               src="./images/portfolio/portfolio3.jpg"
               alt="Назва ресторану на фоні акули"
@@ -84,12 +86,12 @@
             <h2 class="title-item">Ресторан <span lang="en">Seafood</span></h2>
             <p class="item-text">Додаток</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./images/portfolio/portfolio4.jpg" alt="Навушники" width="370" height="294" />
             <h2 class="title-item">Проєкт <span lang="en">Prime</span></h2>
             <p class="item-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
               src="./images/portfolio/portfolio5.jpg"
               alt="Дві коробочки білого та бежевого кольорів"
@@ -99,7 +101,7 @@
             <h2 class="title-item">Проєкт <span lang="en">Boxes</span></h2>
             <p class="item-text">Додаток</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
               src="./images/portfolio/portfolio6.jpg"
               alt="Монітор комп'ютера"
@@ -109,7 +111,7 @@
             <h2 class="title-item" lang="en">Inspiration has no Borders</h2>
             <p class="item-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
               src="./images/portfolio/portfolio7.jpg"
               alt="Розгорнута книга"
@@ -119,7 +121,7 @@
             <h2 class="title-item">Видання <span lang="en">Limited Edition</span></h2>
             <p class="item-text">Дизайн</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
               src="./images/portfolio/portfolio8.jpg"
               alt="Біла бірка з логотипом"
@@ -129,7 +131,7 @@
             <h2 class="title-item">Проєкт <span lang="en">LAB</span></h2>
             <p class="item-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img
               src="./images/portfolio/portfolio9.jpg"
               alt="Друкують на ноутбуці"
@@ -144,9 +146,9 @@
     </main>
     <footer>
       <div class="footer-bgc">
-        <a class="logo-footer" href="./index.html">Web<span>Studio</span></a>
+        <a class="logo-footer container" href="./index.html">Web<span>Studio</span></a>
         <address>
-          <ul class="contacts-footer list">
+          <ul class="contacts-footer list container">
             <li>
               <a
                 class="contacts-footer-address link contacts"
