--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         </div>
       </section>
       <section>
-        <div class="team container">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list list">
+        <div class="team">
+          <h2 class="section-title container">Наша команда</h2>
+          <ul class="team-list list container">
             <li class="team-item">
               <img
                 src="./images/studia/team1.jpg"
