--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <div class="header container">
+    <header class="header">
+      <div class="header-container container">
         <nav class="site-nav">
           <a href="./index.html" class="logo-nav">Web<span>Studio</span></a>
           <ul class="nav-list list">
@@ -49,14 +49,14 @@
     <!-- Main section -->
     <main>
       <!-- Hero section -->
-      <section class="section-hero">
+      <section class="section-hero section">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-button">Замовити послугу</button>
         </div>
       </section>
-      <section>
-        <div class="preference container">
+      <section class="section">
+        <div class="container">
           <h2 class="section-title visually-hidden">Наші переваги</h2>
           <ul class="preference-list list">
             <li>
@@ -86,8 +86,8 @@
           </ul>
         </div>
       </section>
-      <section>
-        <div class="examples container">
+      <section class="section about">
+        <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="examples-list list">
             <li>
@@ -117,10 +117,10 @@
           </ul>
         </div>
       </section>
-      <section>
-        <div class="team">
-          <h2 class="section-title container">Наша команда</h2>
-          <ul class="team-list list container">
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list list">
             <li class="team-item">
               <img
                 src="./images/studia/team1.jpg"
@@ -151,7 +151,7 @@
               <h3 class="team-title">Микола Тарасов</h3>
               <p lang="en" class="team-text">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/studia/team4.jpg"
                 alt="співробітник-дизайнер"
@@ -165,11 +165,11 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="footer-bgc">
-        <a class="logo-footer container" href="./index.html">Web<span>Studio</span></a>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo-footer" href="./index.html">Web<span>Studio</span></a>
         <address>
-          <ul class="contacts-footer list container">
+          <ul class="contacts-footer list">
             <li>
               <a
                 class="contacts-footer-address link contacts"
