--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="header container">
+    <header class="header">
+      <div class="header-container container">
         <nav class="site-nav">
           <a href="./index.html" class="logo-nav">Web<span>Studio</span></a>
           <ul class="nav-list list">
@@ -46,109 +46,134 @@
       </div>
     </header>
     <main>
-      <section class="section-portfolio container">
-        <h1 class="title visually-hidden">Приклади робіт</h1>
-        <ul class="filters list">
-          <li><button type="button" class="filters-item">Усі</button></li>
-          <li><button type="button" class="filters-item">Веб-сайти</button></li>
-          <li><button type="button" class="filters-item">Додатки</button></li>
-          <li><button type="button" class="filters-item">Дизайн</button></li>
-          <li><button type="button" class="filters-item">Маркетинг</button></li>
-        </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/portfolio1.jpg"
-              alt="Розкритий ноутбук"
-              width="370"
-              height="294"
-            />
-            <h2 class="title-item">Технокряк</h2>
-            <p class="item-text">Веб-сайт</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/portfolio2.jpg"
-              alt="Два хлопці грають у баскетбол"
-              width="370"
-              height="294"
-            />
-            <h2 class="title-item">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p class="item-text">Дизайн</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/portfolio3.jpg"
-              alt="Назва ресторану на фоні акули"
-              width="370"
-              height="294"
-            />
-            <h2 class="title-item">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="item-text">Додаток</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img src="./images/portfolio/portfolio4.jpg" alt="Навушники" width="370" height="294" />
-            <h2 class="title-item">Проєкт <span lang="en">Prime</span></h2>
-            <p class="item-text">Маркетинг</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/portfolio5.jpg"
-              alt="Дві коробочки білого та бежевого кольорів"
-              width="370"
-              height="294"
-            />
-            <h2 class="title-item">Проєкт <span lang="en">Boxes</span></h2>
-            <p class="item-text">Додаток</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/portfolio6.jpg"
-              alt="Монітор комп'ютера"
-              width="370"
-              height="294"
-            />
-            <h2 class="title-item" lang="en">Inspiration has no Borders</h2>
-            <p class="item-text">Веб-сайт</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/portfolio7.jpg"
-              alt="Розгорнута книга"
-              width="370"
-              height="294"
-            />
-            <h2 class="title-item">Видання <span lang="en">Limited Edition</span></h2>
-            <p class="item-text">Дизайн</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/portfolio8.jpg"
-              alt="Біла бірка з логотипом"
-              width="370"
-              height="294"
-            />
-            <h2 class="title-item">Проєкт <span lang="en">LAB</span></h2>
-            <p class="item-text">Маркетинг</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/portfolio9.jpg"
-              alt="Друкують на ноутбуці"
-              width="370"
-              height="294"
-            />
-            <h2 class="title-item" lang="en">Growing Business</h2>
-            <p class="item-text">Додаток</p>
-          </li>
-        </ul>
+      <section class="section-portfolio section">
+        <div class="container">
+          <h1 class="title visually-hidden">Приклади робіт</h1>
+          <ul class="filters list">
+            <li><button type="button" class="filters-item">Усі</button></li>
+            <li><button type="button" class="filters-item">Веб-сайти</button></li>
+            <li><button type="button" class="filters-item">Додатки</button></li>
+            <li><button type="button" class="filters-item">Дизайн</button></li>
+            <li><button type="button" class="filters-item">Маркетинг</button></li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio1.jpg"
+                alt="Розкритий ноутбук"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item">Технокряк</h2>
+                <p class="item-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio2.jpg"
+                alt="Два хлопці грають у баскетбол"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                <p class="item-text">Дизайн</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio3.jpg"
+                alt="Назва ресторану на фоні акули"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="item-text">Додаток</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio4.jpg"
+                alt="Навушники"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item">Проєкт <span lang="en">Prime</span></h2>
+                <p class="item-text">Маркетинг</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio5.jpg"
+                alt="Дві коробочки білого та бежевого кольорів"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item">Проєкт <span lang="en">Boxes</span></h2>
+                <p class="item-text">Додаток</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio6.jpg"
+                alt="Монітор комп'ютера"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item" lang="en">Inspiration has no Borders</h2>
+                <p class="item-text">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio7.jpg"
+                alt="Розгорнута книга"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item">Видання <span lang="en">Limited Edition</span></h2>
+                <p class="item-text">Дизайн</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio8.jpg"
+                alt="Біла бірка з логотипом"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item">Проєкт <span lang="en">LAB</span></h2>
+                <p class="item-text">Маркетинг</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/portfolio9.jpg"
+                alt="Друкують на ноутбуці"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-description">
+                <h2 class="title-item" lang="en">Growing Business</h2>
+                <p class="item-text">Додаток</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer>
-      <div class="footer-bgc">
-        <a class="logo-footer container" href="./index.html">Web<span>Studio</span></a>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo-footer" href="./index.html">Web<span>Studio</span></a>
         <address>
-          <ul class="contacts-footer list container">
+          <ul class="contacts-footer list">
             <li>
               <a
                 class="contacts-footer-address link contacts"
